--- a/src/main/webapp/partials/authoring/edit-uploads.html
+++ b/src/main/webapp/partials/authoring/edit-uploads.html
@@ -272,7 +272,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="submit" class="btn-sm btn-primary" ng-click="save();" ng-disabled="documentForm.$invalid || document.hasProject.length==0 || isUnchanged(document)">Save</button>
-                        <button type="button" class="btn-sm btn-default" data-dismiss="modal">Cancel</button>
+                        <button type="button" class="btn-sm btn-default" ng-click="close('#modalDocument')">Cancel</button>
                     </div>
                 </form>
             </div>
