--- a/src/main/webapp/partials/account.html
+++ b/src/main/webapp/partials/account.html
@@ -21,7 +21,7 @@
         <span class="alert-message">{{flash.message}}</span>
     </div>
 
-<h3 class="green bold below">User Account</h3>
+<h3 class="green bold below" data-i18n="_user-account_"></h3>
 
 <!--dl class="dl-horizontal">
   <dt>WebId:</dt><dd>https://my-profile.eu/people/alegrm/card#me</dd>
@@ -37,13 +37,13 @@
 
     <table class="table table-bordered" ng-if="currentAccount.username">
     	<tr>
-        <td>Username:</td><td>{{currentAccount.username}}</td>
+        <td>{{'_username_' | i18n}}:</td><td>{{currentAccount.username}}</td>
         </tr>
         <tr>
-        <td>E-mail address:</td><td>{{currentAccount.email}}</td>
+        <td>{{'_email_' | i18n}}:</td><td>{{currentAccount.email}}</td>
         </tr>
     </table>
-    <button type="button" class="btn-sm btn-primary" data-toggle="modal" data-target="#modalChangePassword" ng-if="currentAccount.username">Change password</button>
+    <button type="button" class="btn-sm btn-primary" data-toggle="modal" data-target="#modalChangePassword" ng-if="currentAccount.username" data-i18n="_change-password_"></button>
 
     <div class="modal fade" id="modalChangePassword">
     <div class="modal-dialog">
@@ -51,22 +51,22 @@
         <form name="changePasswordForm" class="form-horizontal InputForm" role="form">
             <div class="modal-header">
                 <button type="button" class="close" ng-click="close('#modalChangePassword')" aria-hidden="true">&times;</button>
-                <h5 class="modal-title green bold">Change password</h5>
+                <h5 class="modal-title green bold" data-i18n="_change-password_"></h5>
             </div>
             <div class="modal-body">
                 <div class="form-group">
-                    <label for="oldPassword" class="col-lg-2 control-label">Old password</label>
+                    <label for="oldPassword" class="col-lg-2 control-label" data-i18n="_old-password_"></label>
                     <div class="col-lg-10">
-                        <input type="password" id="oldPassword" name="oldPassword" class="form-control" placeholder="Old password" ng-model="password.oldPassword" required/>
+                        <input type="password" id="oldPassword" name="oldPassword" class="form-control" ng-model="password.oldPassword" required/>
                         <div class="error"  ng-show="changePasswordForm.oldPassword.$dirty && changePasswordForm.oldPassword.$invalid">Invalid:
                             <span ng-show="changePasswordForm.oldPassword.$error.required">Specify old password</span>
                         </div>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label for="newPassword" class="col-lg-2 control-label">New password</label>
+                    <label for="newPassword" class="col-lg-2 control-label" data-i18n="_new-password_"></label>
                     <div class="col-lg-10">
-                        <input type="password" id="newPassword" name="newPassword" class="form-control" placeholder="New password" ng-model="password.newPassword" required/>
+                        <input type="password" id="newPassword" name="newPassword" class="form-control" ng-model="password.newPassword" required/>
                         <div class="error"  ng-show="changePasswordForm.newPassword.$dirty && changePasswordForm.newPassword.$invalid">Invalid:
                             <span ng-show="changePasswordForm.newPassword.$error.required">Specify new password</span>
                         </div>
@@ -74,8 +74,8 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="submit" class="btn-sm btn-primary" ng-click="changePassword();" ng-disabled="changePasswordForm.$invalid">Change</button>
-                <button type="button" class="btn-sm btn-default" data-dismiss="modal">Cancel</button>
+                <button type="submit" class="btn-sm btn-primary" ng-click="changePassword();" ng-disabled="changePasswordForm.$invalid" data-i18n="_change_"></button>
+                <button type="button" class="btn-sm btn-default" ng-click="close('#modalChangePassword')" data-i18n="_cancel_"></button>
             </div>
         </form>
         </div>
