--- a/src/main/webapp/partials/authoring/ontology.html
+++ b/src/main/webapp/partials/authoring/ontology.html
@@ -6,19 +6,18 @@
     </div>
 
     <div class="row below">
-    <h3 class="green bold">
+    <h3 class="green bold" data-i18n="_ontologies_">
         <span class="btn-group">
             <button type="button" class="btn btn-link reset" ng-click="refreshOntologies()">
                 <i class="glyphicon glyphicon-refresh" aria-hidden="true"></i>
             </button>
         </span>
-        Ontologies
     </h3>
 
     <table class="table table-striped">
         <thead>
         <tr>
-            <th>Action</th>
+            <th data-i18n="_action_"></th>
             <th>URI</th>
         </tr>
         </thead>
@@ -33,23 +32,23 @@
         </tbody>
     </table>
     
-    <button type="button" class="btn btn-primary btn-large" data-toggle="modal" data-target="#modalOntology" ng-click="new();" ng-disabled="!isLoggedIn()">Add new ontology</button>
-    <button type="button" class="btn btn-primary btn-large" data-toggle="modal" data-target="#reindexDocuments" ng-click="beforeReindex()" ng-disabled="!isLoggedIn()">Re-Index with current Thesaurus</button>
+    <button type="button" class="btn btn-primary btn-large" data-toggle="modal" data-target="#modalOntology" ng-click="new();" ng-disabled="!isLoggedIn()" data-i18n="_add-ontology_"></button>
+    <button type="button" class="btn btn-primary btn-large" data-toggle="modal" data-target="#reindexDocuments" ng-click="beforeReindex()" ng-disabled="!isLoggedIn()" data-i18n="_reindex-cur-thesaurus_"></button>
 
     <div class="modal fade" id="reindexDocuments">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" ng-click="close('#reindexDocuments')" aria-hidden="true">&times;</button>
-                    <h5 class="modal-title green bold">Re-Index documents</h5>
+                    <h5 class="modal-title green bold" data-i18n="_reindex-docs_"></h5>
                 </div>
                 <div class="modal-body">
-                    <p>Re-index all documents with current thesaurus?</p>
+                    <p data-i18n="_reindex-confirm_"></p>
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" class="btn-sm btn-primary" ng-click="reindex();" ng-disabled="reindexing">Yes</button>
-                    <button type="button" class="btn-sm btn-default" ng-click="close('#reindexDocuments')" ng-disabled="reindexing">No</button>
-                    <span ng-show="reindexing">Re-indexing...</span>
+                    <button type="submit" class="btn-sm btn-primary" ng-click="reindex();" ng-disabled="reindexing" data-i18n="_yes_"></button>
+                    <button type="button" class="btn-sm btn-default" ng-click="close('#reindexDocuments')" ng-disabled="reindexing" data-i18n="_no_"></button>
+                    <span ng-show="reindexing" data-i18n="_reindexing_"></span>
                 </div>
             </div>
         </div>
@@ -59,13 +58,13 @@
     <div class="modal-content">
         <div class="modal-header">
             <button type="button" class="close" ng-click="close('#modalOntology')" aria-hidden="true">&times;</button>
-            <h5 class="modal-title green bold">Add ontology</h5>
+            <h5 class="modal-title green bold" data-i18n="_add-ontology_"></h5>
         </div>
 
         <div class="modal-body">
             <form class="form-horizontal InputForm col-xs-11" role="form" name="typeForm">
                 <div class="row">
-                    <label for="source-type" class="col-xs-2 control-label">Import from a </label>
+                    <label for="source-type" class="col-xs-2 control-label" data-i18n="_import-from_"></label>
                     <div class="col-xs-10">
                         <select id="source-type" class="form-control" ng-model="sourceType" ng-options="c.label for c in sourceTypes" ng-change="updateForm()" required></select>
                     </div>
@@ -76,7 +75,7 @@
             <div ng-show="fileElements" class="animate-show">
                 <form class="form-horizontal InputForm col-xs-11" role="form" name="fileForm" novalidate>
                     <div class="form-group">
-                        <label class="col-xs-2 control-label">File input</label>
+                        <label class="col-xs-2 control-label" data-i18n="_file-input_"></label>
                         <div class="col-xs-10">
                             <input type="file" ng-file-select="onFileSelect($files)" name="fileName" accept=".ttl, .rdf">
                         </div>
@@ -102,8 +101,8 @@
         </div>
 
         <div class="modal-footer">
-            <button type="submit" class="btn-sm btn-primary" ng-click="add();">Add</button>
-            <button type="button" class="btn-sm btn-default" ng-click="close('#modalOntology')">Cancel</button>
+            <button type="submit" class="btn-sm btn-primary" ng-click="add();" data-i18n="_add_"></button>
+            <button type="button" class="btn-sm btn-default" ng-click="close('#modalOntology')" data-i18n="_cancel_"></button>
         </div>
     </div>
     </div>
